api: add /transform, refactoring config
This commit adds new endpoint /transform that will be used
to copy raw images from location specified in config and apply
transformations on them. This allows is part of the optimalization
process as well as big functionality improvement.
Futhermore config.yml has been refactorized and now path section is
simpler and claerer.
Minor changes:
* /csv endpoints is renamed to /annotations and was simplified
