# server/utils.py
@@ -1,0 +1,7 @@
+from enum import Enum
+
+
+class DatasetType(Enum):
+    UNLABELLED = 'unlabelled'
+    TRAIN = 'train'
+    TEST = 'test'
