# server/views/__init__.py
@@ -1,8 +1,9 @@
 from .config import ConfigsView
 from .predictions import PredictionsView
 from .home import HomeView
-from .csv import CsvView
+from .annotation import AnnotationsView
 from .train import TrainView
-from .evaluate import EvaluateView
+from .evaluation import EvaluateView
 from .information import InformationView
 from .prepare import PrepareView
+from .transformation import TransformView
